adjusted margins corrected overflow issue

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -22,7 +22,9 @@
 
 html {
   height: 100%;
+  width: 100%;
   background-color: #faf9f6;
+  overscroll-behavior: none;
 }
 
 body > h1 {
@@ -164,7 +166,7 @@ textarea {
   padding: 0.5rem;
   font-size: 16px;
   min-width: 80px;
-  max-width: 420px;
+  max-width: 320px;
   min-height: 32px;
 }
 
@@ -313,23 +315,25 @@ iframe {
 }
 
 /* AgeCalc*/
+#ageCalculator {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 
 #ageForm {
   grid-template-columns: 1fr;
   min-height: 300px;
   max-height: none;
-  width: 90%;
+  max-width: 80%;
+  place-items: center;
 }
 
 #ageForm > input {
   margin-bottom: 1rem;
   width: 80%;
-}
-
-#ageForm > button {
-  margin-top: 0;
-  max-width: 13rem;
-  max-height: 4rem;
 }
 
 /* Schedule*/
@@ -371,6 +375,9 @@ tr:nth-child(odd) {
   background-color: var(--odd-row-color);
   height: 3rem;
   text-align: center;
+}
+#scheduling > button {
+  max-width: 320px;
 }
 
 /* Weather*/
@@ -470,6 +477,10 @@ tr:nth-child(odd) {
   background-color: var(--button-active);
 }
 
+#taskInput {
+  max-width: 140px;
+}
+
 /*Media Queries*/
 
 @media (max-width: 700px) {
@@ -549,21 +560,21 @@ tr:nth-child(odd) {
     padding: 0;
     width: 100%;
   }
+
   #scheduling,
   #ageForm {
-    width: fit-content;
+    max-width: 50%;
   }
 
   #ageForm {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 3rem;
   }
 
   #ageForm > input {
     height: 3rem;
-    max-width: 190px;
+    max-width: 140px;
     margin: 0;
   }
 
